--- a/main.html
+++ b/main.html
@@ -22,8 +22,8 @@
 </head>
 <body>
 
-    <button onclick="createTable()">Create the table</button>
-    <table id="myTable"></table>
+    <input type="button" value="Create the table" onclick="createTable()">
+
 
     <script src="script.js"></script>
 
