--- a/main.html
+++ b/main.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Table</title>
+    <table id="myTable"></table>
+
+	<title>Dynamic Table</title>
     <style>
         body {
             text-align: center;
